--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,5 @@
-[package]
-name = "suzu-api"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tonic = "0.8"
-prost = "0.11"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-tokio-stream = { version = "0.1" }
-
-[build-dependencies]
-tonic-build = "0.8"
+members = [
+    "api", "infra"
+]
