--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,7 +10,12 @@ tonic = "0.8"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tokio-stream = { version = "0.1" }
+sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
 infra = {path = "../infra"}
+once_cell = "1.19.0"
+futures = "0.3.29"
 
 [build-dependencies]
 tonic-build = "0.8"
+
+
