--- a/infra/Cargo.toml
+++ b/infra/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
+sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
+sqlx-mysql = "0.7.3"
+time = "0.3.30"
