--- a/infra/Cargo.toml
+++ b/infra/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 chrono = "0.4.31"
 sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
 sqlx-mysql = "0.7.3"
+once_cell = "1.19.0"
+futures = "0.3.29"
