--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,5 +15,6 @@ jobs:
       - id: cargo-build
         name: cargo build
         run: |
+          cargo --version
           cargo build
         shell: bash
