--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,8 @@ jobs:
       - id: setup-rust
         name: setup rust
         uses: ningenMe/setup-rustup@v0.3.0
+        with:
+          version: 1.75.0
       - id: cargo-build
         name: cargo build
         run: |
