--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,11 +37,11 @@ jobs:
       - id: checkout
         name: checkout
         uses: actions/checkout@v3.5.0
-      - id: setup-infra
-        name: setup infra
-        run: |
-          docker-compose -f ./infra/tool/docker-compose.yaml up -d
-        shell: bash
+      # - id: setup-infra
+      #   name: setup infra
+      #   run: |
+      #     docker-compose -f ./infra/tool/docker-compose.yaml up -d
+      #   shell: bash
       - id: setup-rustup
         name: setup rustup
         uses: ningenMe/setup-rustup@v1.1.0
@@ -53,7 +53,7 @@ jobs:
       - id: cargo-build
         name: cargo build
         run: |
-          DATABASE_URL=mysql://root:password@127.0.0.1:3306/blog cargo build -p ${{ inputs.application-name }} --release
+          cargo build -p ${{ inputs.application-name }} --release
         shell: bash
       - id: docker-image-push
         name: docker-image-push
