--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,6 +57,9 @@ jobs:
         run: |
           cargo build -p ${{ inputs.application-name }} --release
         shell: bash
+      - id: debug
+        run: |
+          ls -la ./target/release
       - id: docker-image-push
         name: docker-image-push
         uses: ningenMe/chiyuki-k8s-config/action/docker-image-push@main
@@ -66,16 +69,16 @@ jobs:
           aws-ecr-registry: ${{ secrets.AWS_ECR_REGISTRY }}
           docker-image-name: ${{ needs.constant.outputs.docker-image-name }}
           dockerfile-path: ./${{ inputs.application-name }}
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [ constant, build-and-push-image ]
-  #   steps:
-  #     - id: checkout
-  #       name: checkout
-  #       uses: actions/checkout@v3.5.0
-  #     - id: kick-deploy
-  #       name: kick deploy
-  #       uses: ningenMe/chiyuki-k8s-config/action/kick-deploy@main
-  #       with:
-  #         deploy-token: ${{ secrets.DEPLOY_TOKEN }}
-  #         application-name: suzu-api
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ constant, build-and-push-image ]
+    steps:
+      - id: checkout
+        name: checkout
+        uses: actions/checkout@v3.5.0
+      - id: kick-deploy
+        name: kick deploy
+        uses: ningenMe/chiyuki-k8s-config/action/kick-deploy@main
+        with:
+          deploy-token: ${{ secrets.DEPLOY_TOKEN }}
+          application-name: suzu-api
