--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,5 +25,6 @@ jobs:
       - id: cargo-build
         name: cargo build
         run: |
-          cargo build --release
+          rustup target add x86_64-unknown-linux-musl
+          cargo build --target=x86_64-unknown-linux-musl
         shell: bash
