--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.19
 
-COPY ./../target/release/api /app/api
+COPY ./../target/x86_64-unknown-linux-musl/api /app/api
 
 CMD ["/app/api"]
