--- a/batch/Cargo.toml
+++ b/batch/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 infra = {path = "../infra"}
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
