--- a/infra/Cargo.toml
+++ b/infra/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.31"
+reqwest = "0.11.23"
 sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
 sqlx-mysql = "0.7.3"
 once_cell = "1.19.0"
 futures = "0.3.29"
+scraper = "0.18.1"
+
