--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,5 +32,5 @@ jobs:
         name: cargo build
         run: |
           rustup target add x86_64-unknown-linux-musl
-          cargo build --target=x86_64-unknown-linux-musl
+          TARGET_CC=x86_64-linux-musl-gcc cargo build --target=x86_64-unknown-linux-musl
         shell: bash
