--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,8 @@ jobs:
       - id: setup-openssl
         name: setup openssl
         run: |
-          sudo apt install libssl-dev
+          sudo apt-get install libssl-dev
+          sudo apt-get install musl-tools
         shell: bash
       - id: cargo-build
         name: cargo build
