--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -2,4 +2,4 @@ FROM alpine:3.19
 
 COPY ./../target/x86_64-unknown-linux-musl/release/batch /app/batch
 
-CMD ["/app/batch", "--hatena", "--qiita", "--ameba"]
+CMD ["/app/batch", "--hatena", "--qiita", "--ameba", "--zenn"]
